# Chess-Game

./: .gitignore  CMakeLists.txt  README.md  Readme.md
src/: CMakeLists.txt  MainFacade.cpp  MainFacade.h  MainFactory.cpp  MainFactory.h  main.cpp
src/Application/: CMakeLists.txt  ServiceRegistry.cpp  ServiceRegistry.h
src/Application/Container/: Container.cpp  Container.h
src/Application/Facade/: AbstractFacade.cpp  AbstractFacade.h
src/Application/Factory/: AbstractFactory.cpp  AbstractFactory.h
src/Application/Resolver/: AbstractResolver.cpp  AbstractResolver.h  FacadeResolver.cpp  FacadeResolver.h  FactoryResolver.cpp  FactoryResolver.h  FactoryResolverTrait.cpp  FactoryResolverTrait.h
src/Chess/: CMakeLists.txt  ChessFacade.cpp  ChessFacade.h  ChessFactory.cpp  ChessFactory.h
src/Chess/Checkmate/: CheckmateManager.cpp  CheckmateManager.h
src/Chess/ChessCreator/: ChessCreator.cpp  ChessCreator.h
src/Chess/ChessPiece/: BaseChessPiece.cpp  BaseChessPiece.h  BishopPiece.cpp  BishopPiece.h  KingPiece.cpp  KingPiece.h  KnightPiece.cpp  KnightPiece.h  PawnPiece.cpp  PawnPiece.h  QueenPiece.cpp  QueenPiece.h  RookPiece.cpp  RookPiece.h
src/Chess/Creator/: ChessCreator.cpp  ChessCreator.h
src/Chess/GameApplication/: GameApplication.cpp  GameApplication.h  GameApplicationManager.cpp  GameApplicationManager.h
src/Chess/Model/: ChessCell.cpp  ChessCell.h  ChessField.cpp  ChessField.h
src/Chess/Movement/: ChessPieceMovementManager.cpp  ChessPieceMovementManager.h  ChessPieceMovementTrait.cpp
src/ChessGui/: CMakeLists.txt  ChessGuiFacade.cpp  ChessGuiFacade.h  ChessGuiFactory.cpp  ChessGuiFactory.h
src/ChessGui/Model/: ChessGridLayout.cpp  ChessGridLayout.h  ChessGuiCell.cpp  ChessGuiCell.h  ChessGuiCellManager.cpp  ChessGuiCellManager.h  ChessSelectionPiece.cpp  ChessSelectionPiece.h
src/ChessGui/Renderer/: ChessCoordinateConverter.cpp  ChessCoordinateConverter.h  ChessGuiRenderer.cpp  ChessGuiRenderer.h  ChessTimer.cpp  ChessTimer.h
src/ChessTimeline/: CMakeLists.txt  ChessTimelineFacade.cpp  ChessTimelineFacade.h  ChessTimelineFactory.cpp  ChessTimelineFactory.h
src/ChessTimeline/GridUpdate/: ChessGridUpdater.cpp  ChessGridUpdater.h
src/ChessTimeline/Mapper/: ChessTimelineMapper.cpp  ChessTimelineMapper.h
src/ChessTimeline/Model/: ChessPieceLog.cpp  ChessPieceLog.h  ChessTimelineData.cpp  ChessTimelineData.h  ChessTurnLog.cpp  ChessTurnLog.h
src/ChessTimeline/Reader/: ChessTurnLogReader.cpp  ChessTurnLogReader.h
src/ChessTimeline/Writer/: ChessTurnLogWriter.cpp  ChessTurnLogWriter.h
src/Multiplayer/: CMakeLists.txt  MultiplayerFacade.cpp  MultiplayerFacade.h  MultiplayerFactory.cpp  MultiplayerFactory.h
src/Multiplayer/Client/: ChessClient.cpp  ChessClient.h  ChessClientManager.cpp  ChessClientManager.h  ChessClientResponseDelegator.cpp  ChessClientResponseDelegator.h
src/Multiplayer/Socket/: CMakeLists.txt  ChessServer.cpp  ChessServer.h  serverwindow.cpp  serverwindow.h  serverworker.cpp  serverworker.h
src/MultiplayerGui/: CMakeLists.txt  MultiplayerGuiFacade.cpp  MultiplayerGuiFacade.h  MultiplayerGuiFactory.cpp  MultiplayerGuiFactory.h
src/MultiplayerGui/Model/: MultiplayerGuiModelCreator.cpp  MultiplayerGuiModelCreator.h
src/Shared/: CMakeLists.txt
src/Shared/Chess/: CheckmateConstants.h  ChessConstants.h  ChessMovementConstants.h
(+137 files in other folders)
